# dravid

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  conftest.py  drd.json  gui.spec  project_guidelines.txt  project_metadata.json  pyproject.toml
.github/workflows/: ci.yml  main.yml
scripts/: run_tests.py
src/drd/: .gitignore  __init__.py  claude_api.py  claude_parser.py  dev_server_monitor.py  dravid_api.py  executor.py  file_operations.py  gui.py  image_handler.py  main.py  metadata_initializer.py  metadata_updater.py  monitor.py  project_metadata.json  project_metadata.py  query_executor.py  run_ggui.py  run_gui.py  utils.py
src/drd/api/: __init__.py  claude_api.py  dravid_api.py  dravid_parser.py  main.py  ollama_api.py  openai_api.py
src/drd/cli/: __init__.py  ask_handler.py  commands.py  main.py  monitor.py
src/drd/metadata/: __init__.py  common_utils.py  initializer.py  project_metadata.py  rate_limit_handler.py  updater.py
src/drd/prompts/: __init__.py  claude_instructions.py  error_handling.py  error_resolution_prompt.py  file_metada_desc_prompts.py  file_operations.py  get_project_info_prompts.py  instructions.py  metadata_update_prompts.py  monitor_error_resolution.py
src/drd/query_executor/: __init__.py  executor.py  file_operations.py  image_handler.py
src/drd/utils/: __init__.py  api_utils.py  apply_file_changes.py  description_generator.py  diff.py  file_utils.py  input.py  loader.py  parser.py  pretty_print_stream.py  step_executor.py  universal_input_lock.py  utils.py
tests/api/: test_api_main.py  test_claude_api.py  test_dravid_api.py  test_dravid_parser.py  test_openai_api.py
tests/cli/monitor/: test_dev_server_monitor.py  test_error_resolvers.py  test_input_handler.py  test_input_parser.py  test_output_monitor.py
tests/cli/query/: test_dynamic_command_handler.py  test_file_operations.py  test_image_handler.py  test_query_main.py
tests/metadata/: test_common_utils.py  test_initializer.py  test_project_metadata.py  test_rate_limit_handler.py  test_updater.py
tests/utils/: test_api_utils.py  test_apply_changes.py  test_diff.py  test_file_utils.py  test_loader.py  test_parser.py  test_pretty_print_stream.py  test_step_executor.py  test_utils.py
(+21 files in other folders)
