[tool.poetry]
name = "dravid"
version = "0.7.0"
description = "A CLI coding super-framework using AI"
authors = ["Vysakh Sreenivasan <srvysakh@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "drd", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.0"
requests = "^2.25.0"
python-dotenv = "^0.19.0"
colorama = "^0.4.4"
Pillow = "^9.0.0"

pigments = "^1.6"
[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
black = "^21.5b0"
flake8 = "^3.9.0"
PyQt6 = "^6.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
drd = "drd.cli.main:dravid_cli"
test = "run_tests:main"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["src"]
python_files = "test_*.py"